resolve offer list spacing issue

--- a/apps/nft-market/src/app/pages/my-account-page/my-account-offers/my-account-offers.module.scss
+++ b/apps/nft-market/src/app/pages/my-account-page/my-account-offers/my-account-offers.module.scss
@@ -1,3 +1,3 @@
 .responsive_table {
-  min-width: 1268px;
+  min-width: 360px;
 }
